# avfl_autonomy

avfl_navigate/: CMakeLists.txt  package.xml
docker/: build.sh  dockerfile  run.sh
docs/: ardupilot_copter_ros2_commands.md
drone_description/: CMakeLists.txt  package.xml
drone_description/models/nelore/: model.config  model.sdf
drone_gazebo/: CMakeLists.txt  package.xml
drone_gazebo/config/: nelore_bridge.yaml
drone_gazebo/launch/: nelore_camera_test.launch.py  nelore_test.launch.py  simple_mission.launch.py  simple_world.launch.py
drone_gazebo/launch/robots/: nelore.launch.py
drone_gazebo/models/aruco_marker/: model.config  model.sdf
drone_gazebo/models/aruco_marker_0/: model.config  model.sdf
drone_gazebo/models/aruco_marker_1/: model.config  model.sdf
drone_gazebo/models/aruco_marker_2/: model.config  model.sdf
drone_gazebo/models/aruco_marker_3/: model.config  model.sdf
drone_gazebo/models/install/: local_setup.sh  setup.sh
drone_gazebo/models/log/: latest_build  latest_list
drone_gazebo/rviz/: drone_gazebo.rviz
drone_gazebo/scripts/: aruco.py  generate_aruco_markers.py  simple_mission.py  view_camera.py
drone_gazebo/worlds/: nelore_test_world.sdf  simple_world.sdf
drone_navigate/: CMakeLists.txt  package.xml
drone_navigate/drone_navigate/: __init__.py  navigate_guided.py
drone_navigate/srv/: Navigate.srv
